--- a/base/杨黎的简历.md
+++ b/base/杨黎的简历.md
@@ -24,13 +24,15 @@
 ### 平安智慧企业核心人事系统 
 智慧企业核心人事系统是管理人、岗、组织的综合MIS管理系统，我主要从事离线平台，个人统计库数据对接，权限系统和开放平台的开发，个人统计库和开放平台底层是基于平安的容器云组件，个人统计库是个人数据平台，多租户之间通过容器平台进行数据资源的分配。
 
-1.我所做的是把个人统计库中的切片数据导入到离线平台，实现离线平台的业务功能，离线平台支持pc，pad设备做业务处理，功能查阅等，用sqlite统一做数据存储，使用java反射技术和自定义注解对离线平台需要的数据类型做个性化导出设计，离线pc后台用到了springboot框架，pad后台用到了android做底层封装，接口实现主要是java框架，前端统一用electron编写 
+* 我所做的是把个人统计库中的切片数据导入到离线平台，实现离线平台的业务功能，离线平台支持pc，pad设备做业务处理，功能查阅等，用sqlite统一做数据存储，使用java反射技术和自定义注解对离线平台需要的数据类型做个性化导出设计，离线pc后台用到了springboot框架，pad后台用到了android做底层封装，接口实现主要是java框架，前端统一用electron编写 
 
-2.权限系统是基于rbac做的管理设计，主要是通过配置相应的资源，限制条件生成动态条件sql拼接起来用于mybatis查询
+* 权限系统是基于rbac做的管理设计，主要是通过配置相应的资源，限制条件生成动态条件sql拼接起来用于mybatis查询
 
-3.部署流水线搭建，CI/CD，利用OpenShift平台整合Docker，k8s进行应用的发布
+* 开放平台基于自研的容器云项目和Kong网关对接口，应用进行授权，验证，发布，监控管理
 
-4.已经实施的客户包括蓝月亮，保洁，福田区委、财政厅等大型企业集团
+* 部署流水线搭建，CI/CD，利用OpenShift平台整合Docker应用，k8s集群管理进行发布
+
+* 已经实施的客户包括蓝月亮，保洁，福田区委、财政厅等大型企业集团
 
 主要成就：在疫情期间按照客户定制上线，对抗击新冠疫情做了贡献
 
@@ -38,9 +40,9 @@
 ### 平安企业云协同办公系统 
 企业云管理平台是基于sass多租户协同办公平台，包含智能门户入口，统一基础平台，开放平台，运维平台 
 
-1.我主要负责智能门户的设计与开发，与开放平台做数据/功能卡片对接，在门户性能调优，项目客户交付对接方面表现突出，主要用到的技术栈包括spring cloud，mysql，redis，rocketmq，fastdfs，websocket 
+* 我主要负责智能门户的设计与开发，与开放平台做数据/功能卡片对接，在门户性能调优，项目客户交付对接方面表现突出，主要用到的技术栈包括spring cloud，mysql，redis，rocketmq，fastdfs，websocket 
 
-2.已经实施的客户包括恒大，正大，信达等大型企业集团
+* 已经实施的客户包括恒大，正大，信达等大型企业集团
 
 
 ## 移动财经（深圳）有限公司 （ 2015年7月 ~ 2018年7月 ）
@@ -48,9 +50,8 @@
 ### 金融大侠，淘金快手app项目
 金融大侠，淘金快手是一站式金融社交app
 
-1.我主要做后端接口实现，主要用到JWT做鉴权认证，Spring MVC后端框架，Hibernate做持久层实现，WebSocket实现行情数据实时更新与刷新 
-
-2.对接及时通信服务商环信、极光推送实现消息和推送服务，短信服务商建州科技
+* 我主要做后端接口实现，主要用到JWT做鉴权认证，Spring MVC后端框架，Hibernate做持久层实现，WebSocket实现行情数据实时更新与刷新 
+* 对接及时通信服务商环信、极光推送实现消息和推送服务，短信服务商建州科技
 
 主要成就：App成功上线各大应用市场
 
