--- a/base/面试.md
+++ b/base/面试.md
@@ -210,5 +210,81 @@ Map去实现
 
 
 
+### Mysql
+
+#### Mysql的索引有哪些
+
+* 数据结构角度
+
+  1.B+树索引
+
+  2.Hash索引
+
+  3.FullText索引
+
+  4.R-Tree
+
+* 物理存储角度
+
+  聚集索引
+
+  非聚集索引
+
+* 逻辑角度
+
+  1.主键索引
+
+  2.普通索引或单单列索引
+
+  3.多列索引（复合索引）：最左前缀匹配
+
+* 唯一索引或非唯一索引
+
+* 空间索引
+
+
+
+#### 什么是回表、索引覆盖
+
+回表就是比如我们建立了一个索引(a,b)，但是要查的数据包括(a,b,c),这样查询的时候就需要进行回表操作
+
+而如果我们查询的就是(a,b)这样查询就可以进行了，称为索引覆盖。 
+
+<strong>需要说明的是覆盖索引必须要存储索引列的值，而Hash，空间索引和全文索引不存储列的值，所以mysql只能用B+ tree索引做索引覆盖</strong>
+
+
+
+
+
+#### SQL基础
+
+stu表
+
+| id   | name |
+| ---- | ---- |
+| 1    | 张三 |
+| 2    | 李四 |
+| 3    | 王五 |
+
+score表
+
+| id   | s_id | score |
+| ---- | ---- | ----- |
+| 1    | 1    | 80    |
+| 2    | 1    | 90    |
+| 3    | 2    | 98    |
+| 4    | 2    | 95    |
+
+查出优生的结果（每颗成绩大于90分）
+
+<code>select name from stu  as stu where not exists (select 1 from score as s where s.score <=90 and s.`s_id` = stu.id)
+and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
+
+
+
+
+
+
+
 有两个编程题，一个是线程同步的，基本就是如何确保临界区，最多只有三个线程进入。
 
