--- a/base/杨黎的简历.md
+++ b/base/杨黎的简历.md
@@ -40,7 +40,7 @@
 ### 平安企业云协同办公系统 
 企业云管理平台是基于sass多租户协同办公平台，包含智能门户入口，统一基础平台，开放平台，运维平台 
 
-* 我主要负责智能门户的设计与开发，与开放平台做数据/功能卡片对接，在门户性能调优，项目客户交付对接方面表现突出，主要用到的技术栈包括spring cloud，mysql，redis，rocketmq，fastdfs，websocket 
+* 我主要负责智能门户的设计与开发，与开放平台做数据/功能卡片对接，在门户性能调优，项目客户交付对接方面表现突出，主要用到的技术栈包括spring cloud，mysql，redis，rocketmq，fastdfs，websocket，MongoDB
 
 * 已经实施的客户包括恒大，正大，信达等大型企业集团
 
@@ -51,7 +51,9 @@
 金融大侠，淘金快手是一站式金融社交app
 
 * 我主要做后端接口实现，主要用到JWT做鉴权认证，Spring MVC后端框架，Hibernate做持久层实现，WebSocket实现行情数据实时更新与刷新 
-* 对接及时通信服务商环信、极光推送实现消息和推送服务，短信服务商建州科技
+* 对接第三方服务如及时通信服务商环信服务、极光推送实现消息和推送服务，短信服务商建州科技
+* 对接支付服务打通支付服务如微信支付、支付宝AliPay等调用实现
+* 熟悉常用的Linux基本命令，因为我们服务器都是自己在操作部署，所以对于Linux服务器的基本命令比较熟悉
 
 主要成就：App成功上线各大应用市场
 
