--- a/base/面试.md
+++ b/base/面试.md
@@ -286,5 +286,18 @@ and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
 
 
 
+l熟悉J2EE相关设计模式，JDK 1.8。
+l熟练应用Linux command 、 shell。
+l熟练使用SpringMVC+MyBatis/的开发模式，SpringBoot、SpringCloud等框架。
+l熟练使用Maven、Git、SVN、rap2等工具。
+l熟悉MySQL、Oracle数据库的使用，能够熟练编写SQL语句。
+l熟悉HTML、CSS、JavaScript、jQuery、JSP、Servlet、AJAX、JSON、JSTL等前端技术。
+
+l熟悉Docker,K8s,OpenShift等容器或服务发布、部署、编排、管理技术
+
+
+
+
+
 有两个编程题，一个是线程同步的，基本就是如何确保临界区，最多只有三个线程进入。
 
