--- a/base/面试.md
+++ b/base/面试.md
@@ -208,6 +208,26 @@ Map去实现
 
 
 
+### JVM问题
+
+#### 类加载机制
+
+类的加载指将类的.class文件的二进制数据读入内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个java.lang.Class对象，用来封装类在方法区中的数据结构（<strong style="color:red">这个看着有点绕呀</strong>>）
+
+![wps5F9E.tmp](https://images2015.cnblogs.com/blog/331425/201606/331425-20160621125941772-1913742708.png)
+
+类加载器并不需要等到某个类被”首次主动使用“时再加载它，JVM规范允许类加载器在预料某个类将要被使用时就预先加载它
+
+#### 类的生命周期
+
+![wps257C.tmp](https://images2015.cnblogs.com/blog/331425/201606/331425-20160621125943209-1443333281.png)
+
+
+
+
+
+
+
 
 
 ### Mysql
@@ -279,21 +299,6 @@ score表
 
 <code>select name from stu  as stu where not exists (select 1 from score as s where s.score <=90 and s.`s_id` = stu.id)
 and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
-
-
-
-
-
-
-
-l熟悉J2EE相关设计模式，JDK 1.8。
-l熟练应用Linux command 、 shell。
-l熟练使用SpringMVC+MyBatis/的开发模式，SpringBoot、SpringCloud等框架。
-l熟练使用Maven、Git、SVN、rap2等工具。
-l熟悉MySQL、Oracle数据库的使用，能够熟练编写SQL语句。
-l熟悉HTML、CSS、JavaScript、jQuery、JSP、Servlet、AJAX、JSON、JSTL等前端技术。
-
-l熟悉Docker,K8s,OpenShift等容器或服务发布、部署、编排、管理技术
 
 
 
