--- a/base/多线程.md
+++ b/base/多线程.md
@@ -2,7 +2,7 @@
 
 
 
-关于HashMap
+<strong>HashMap类</strong>
 
 首先HashMap是线程不安全的，其主要体现：
 
@@ -12,11 +12,17 @@
 
 
 
-ConcurrentHashMap
+<strong>ConcurrentHashMap类</strong>
 
 1.在1.8之前采用分段锁，尽量降低同步锁的粒度
 
 2.在1.8之后采用CAS思想代替冗杂的分段锁实现
+
+
+
+CAS操作流程：
+
+线程在读取数据时不进行加锁，在准备写回数据时，比较原值是否修改，若未被其他线程修改则写回，若已被修改，则重新执行读取流程，CAS问题又引出了下面的ABA问题
 
 
 
@@ -26,9 +32,67 @@ ABA问题 就是线程1准备将变量的值由A变成B，但是线程2已经把
 
 
 
+针对synchronized获取锁的方式，JVM使用了锁升级的优化方式，就是先使用偏向锁优先同一线程然后再次获取锁，如果失败，就升级为CAS轻量级锁，如果失败则就短暂自旋，防止线程被系统挂起。最后如果以上都失败则就升级为重量级锁
+
+
+
 乐观锁的实现会加版本号来对对象记录操作标记，java就用到了AtomicStampedReference类
 
 通过join()保证线程之间的执行顺序
+
+
+
+<strong>synchronized</strong>
+
+锁升级的过程：
+
+JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 效率较低
+
+现代版本进行了优化：无锁 -> 偏向锁 -> 轻量级锁（自旋）->  重量级锁
+
+
+
+<strong>volatile变量</strong>
+
+* 保证了不同线程对它所修饰的变量进行操作时的可见性，即一个线程修改了某个变量的值，这新值对于其他线程来说是立即可见的（实现可见性）
+* 禁止进行指令重排序
+* volatile只能保证对单次读/写的原子性。i++这种操作不能保证原子性
+
+
+
+
+
+<strong>ThreadLocal</strong>
+
+以一种空间换时间的说法，在每个Thread里面维护了一个以开地址法实现的ThreadLocal.ThreadLocalMap，把数据进行隔离，数据不共享，自然就没有线程安全方面的问题
+
+
+
+<strong>ReadWriteLock</strong>
+
+如果用ReentrantLock是可以实现线程A在写数据的时候 B在读数据造成的数据不一致问题，
+
+但是如果线程C、线程D也在读数据，数据是不会发生改变的，没有必要进行加锁，没有必要加锁，降低了程序性能
+
+读写锁就是在读锁时共享的，写锁是独占的，提升了读写的性能
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
