--- a/base/面试.md
+++ b/base/面试.md
@@ -212,15 +212,117 @@ Map去实现
 
 #### 类加载机制
 
-类的加载指将类的.class文件的二进制数据读入内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个java.lang.Class对象，用来封装类在方法区中的数据结构（<strong style="color:red">这个看着有点绕呀</strong>>）
+类的加载指将类的.class文件的二进制数据读入内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个java.lang.Class对象，用来封装类在方法区中的数据结构（<strong style="color:red">这个看着有点绕呀</strong>）
 
 ![wps5F9E.tmp](https://images2015.cnblogs.com/blog/331425/201606/331425-20160621125941772-1913742708.png)
 
 类加载器并不需要等到某个类被”首次主动使用“时再加载它，JVM规范允许类加载器在预料某个类将要被使用时就预先加载它
 
-#### 类的生命周期
+##### 类的生命周期
 
 ![wps257C.tmp](https://images2015.cnblogs.com/blog/331425/201606/331425-20160621125943209-1443333281.png)
+
+* 加载
+
+  加载时类加载过程的第一个阶段，在加载阶段，虚拟机需要完成以下三件事情：
+
+  1、通过一个类的全限定名来获取其定义的二进制字节流。
+
+  2、将这个字节流所代表的静态存储结构转化为方法区的运行时数据结构。
+
+  3、在Java堆中生成一个代表这个类的java.lang.Class对象，作为对方法区中这些数据的访问入口。
+
+  加载阶段完成后，虚拟机外部的二进制字节流就按照虚拟机所需的格式存储在方法区中，而且在Java堆中创建一个java.lang.Class类的对象，这样便可以通过该对象访问方法区中的这些数据。
+
+* 连接
+
+  * <strong>验证</strong>
+
+  这一阶段的目的是为了确保Class文件的字节流中包含的信息符合当前虚拟机的要求，并且不会危害虚拟机自身的安全
+
+  * 准备
+
+  准备阶段是正式为类变量分配内存并设置类变量初始值的阶段，这些内存都将在方法区中分配
+
+  这个时候进行内存分配的仅包括类变量（static），而不包含实例变量，实例变量会在对象实例化随着对象一块分配到堆中
+
+  如果类字段的字段属性表中存在ConstantValue属性，即同时被final和static修饰，那么在准备阶段变量Value就会被初始化为ConstValue属性所指定的值
+
+  * 解析
+
+* 初始化
+
+* 结束生命周期
+
+  
+
+##### JVM类加载机制
+
+* 全盘负责
+
+  当一个类加载器负责加载某个Class时，该Class所依赖的和引用的其他Class也将由该类加载器负责载入，除非显式使用另外一个类加载器来载入
+
+* 父类委托
+
+  先让父类加载器试图加载该类，只有在父类加载器无法加载该类时，才会尝试从自己的类路径中加载该类
+
+* 缓存机制
+
+  缓存机制会让所有加载的类都加入到缓存中去
+
+  
+
+##### 类的加载
+
+Class.forName():将类的.class文件加载到JVM中之外，还会对类进行解释，执行类中的static块
+
+ClassLoader.loadClass():只干一件事，就是将.class文件加载到JVM中，只有在newInstance的时候才会去执行static块
+
+
+
+##### 双亲委派模型
+
+一个类加载器收到加载请求的时候，首先会把请求委托给父加载器去完成，依次向上，因此所有类加载请求最终都应该被传递到顶层的启动类加载器中，只有当父加载器在它的搜索范围中没有找到所需的类的时候，即无法完成该加载，子加载器才会尝试去加载该类
+
+
+
+#### JVM内存结构
+
+JVM内存结构主要有三大块：堆内存、方法区和栈，堆内存是JVM中最大的一块，由新生代与老年代组成，而年轻代内存又被分成三部分，Eden空间，From Survivor空间，To Survivor空间，默认情况年轻代是按照8：1：1分配的
+
+方法区存储类信息、常量、静态变量等数据，是线程共享区域
+
+栈又分为java虚拟机栈和本地方法栈主要用于方法的执行
+
+![JUtH_20121024_RuntimeDataAreas_6_MemoryModel](https://images2015.cnblogs.com/blog/331425/201606/331425-20160623115840235-1252768148.png)
+
+
+
+每个区域的作用：
+
+* Java堆（Heap）
+
+  Java堆是Java虚拟机所管理的内存最大的一块区域，几乎所有的对象实例都在这里分配内存，现在收集器基本都是采用分代收集算法，所以Java堆中还可以细分为：新生代和老年代；再细致一点的有Eden空间、From Survivor空间、To Survivor空间等
+
+  如果在堆中没有内存完成实例分配，并且堆也无法再扩展时，将会抛出OOM异常
+
+* 方法区（Method Area）
+
+  方法区与Java堆一样，是各个线程共享的内存区域，它用于存储已被虚拟机加载的类信息、常量、静态变量、即时编译器编译后的代码等数据
+
+* 程序计数器（Program Counter Register）
+
+  它是一块较小的内存空间，它的作用可以看做是当前线程所执行的字节码的行号指示器
+
+  此内存区域是唯一一个在Java虚拟机规范中没有规定任何OOM情况的区域
+
+* JVM栈（JVM Stacks）
+
+  它是线程私有的，它的生命周期与线程相同，虚拟机栈描述的是Java方法执行的内存模型
+
+* 本地方法栈（Native Method Stacks）
+
+  本地方法栈与虚拟机栈所发挥的作用是非常相似的，其区别不过是虚拟机栈为虚拟机执行Java方法(也就是字节码)服务，而本地方法栈则是为虚拟机使用到Native方法服务
 
 
 
