--- a/base/面试.md
+++ b/base/面试.md
@@ -408,3 +408,32 @@ and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
 
 有两个编程题，一个是线程同步的，基本就是如何确保临界区，最多只有三个线程进入。
 
+
+
+
+
+
+
+### 内存泄漏
+
+在java中内存泄漏就是存在一些被分配的对象，
+
+首先这些对象是可达的，即在有向图中，存在通路可以与其连接；
+
+其次，这些对象是无用的，即程序以后不在使用这些对象
+
+
+
+
+
+### 什么是线程死锁，如何解决
+
+产生死锁的条件有四个：
+
+* 互斥条件：所谓互斥就是进程在某一时间内独占资源
+* 请求与保持条件：一个进程因请求资源而阻塞时，对已获得的资源保持不放
+* 不剥夺条件：进程已获得资源，在未使用之前，不能强行剥夺
+* 循环等待条件：若干进程之前行程头尾相连的循环等待资源关系
+
+
+
