--- a/base/面试.md
+++ b/base/面试.md
@@ -501,10 +501,6 @@ Message Status Check
 
 ### springboot启动流程
 
-
-
-
-
 ### hystrix，ribbon，feign调用时长
 
 
@@ -517,7 +513,7 @@ Message Status Check
 
 ### 单例模式
 
-手写击中：
+手写几种：
 
 1.饿汉式
 
@@ -529,9 +525,50 @@ Message Status Check
 
 
 
-1.电话面试电话面java基础，比如java字符串相加和使用Stringbuilder/StringBuffer 的区别，排序算法会哪些，jvm了解多少。
+##### String和Stringbuilder/StringBuffer
 
-2.现场一面还是问java基础，不过要深入一些，线程池的使用，线程池几个参数的意义，设计模式会什么，手写几种单例模式，MQ的会哪些，怎么确实MQ消息是否消费完，阻塞队列的原理，ConcurrentHashMap的原理以及1.7版本和1.8版本的不同。
+String的值是不可变的，这就导致每次对String的操作都会生成新的String对象，不仅效率低下，而且大量浪费有限的内存空间。
+
+StringBuilder/StringBuffer 在修改的时候不会产生新的未使用的对象
+
+StringBuilder 线程不安全的
+
+StringBuffer 线程安全的
+
+
+
+
+
+排序算法会哪些，
+
+jvm了解多少
+
+
+
+##### 线程池的使用，线程池几个参数的意义
+
+* corePoolSize
+
+* maxPoolSize
+* keepAliveTime
+* allowCoreThreadTimeout
+* queueCapacity
+
+1.当线程数小于核心线程数时，创建线程
+
+2.当线程数大于核心线程数时，且任务队列未满时，加入任务队列
+
+3.当线程数大于核心线程数时，且任务队列已满
+
+​		1.若线程数小于最大线程数，则创建线程
+
+​		2.若线程数大于最大线程数，则抛出异常，拒绝任务
+
+
+
+MQ的会哪些，怎么确实MQ消息是否消费完，阻塞队列的原理，
+
+ConcurrentHashMap的原理以及1.7版本和1.8版本的不同。
 
 3.现场二面主要问项目经验，在项目中担当什么角色，发挥了什么重要作用。
 
@@ -547,7 +584,15 @@ Message Status Check
 
 4.数据库用的哪些实体 ；
 
-5.每个实体之间关系(外键，中间表)；
+##### 每个实体之间关系(外键，中间表)；
+
+一对一
+
+一对多
+
+多对多
+
+
 
 6.MySql索引；
 
@@ -577,21 +622,17 @@ Message Status Check
 
 面试的整个过程问的问题还是比较基础的，其中有一个环境让你当场手写代码，思想大概就是用动态规划求最长公共子串。
 
-**面试官的问题：**
 
-*问*最长公共子串。
+
+
+
+##### 最长公共子串
 
 *答*用动态规划。
 
 
 
 一面是基础面，主要方向是线程池，string、stringbuffer，stringbuilder的区别，数据库索引，hashmap原理，linux指令，性能排查；二面结合项目谈架构，谈亮点，string算法考察，写一个单例模式。
-
-面试官的问题：
-
-问一面是基础面，主要方向是线程池，string、stringbuffer，stringbuilder的区别，数据库索引，hashmap原理，linux指令，性能排查。
-
-答二面结合项目谈架构，谈亮点，string算法考察，写一个单例模式。
 
 
 
@@ -600,6 +641,368 @@ Message Status Check
 2：二面：问项目
 
 
+
+
+
+# 国信杰云
+
+聊的还是比较有意思的
+
+
+
+
+
+# 质数斯达克
+
+1.多线程用过没，具体场景
+
+2.线程池参数介绍
+
+##### ConcurrentHashMap 红黑树是怎么扩容
+
+染色，左旋或右旋？
+
+
+
+4.讲下公平锁/非公平锁的实现
+
+5.zk 选举机制，paxos算法介绍下
+
+##### 布隆过滤器
+
+##### Netty为什么快
+
+##### CMS/ParNew/G1垃圾回收区别
+
+##### myiasm/innodb 应用场景
+
+
+
+##### mysql5.6 mysql5.7 事务隔离级别方面的提升
+
+Mysql5.7通过避免为只读事务分配事务ID，不为只读事务分配回滚段，减少锁竞争等多种方式，优化了只读事务的开销，提高了数据库的整体性能
+
+
+
+##### 你所知道的引用类型
+
+* 软引用
+* 强引用
+* 弱引用
+* 虚引用
+
+##### CompletableFuture
+
+
+
+
+
+# 中建电商
+
+##### 计算机网络相关
+
+##### spring相关面试题，具体的使用方法和应用场景
+
+##### MQ相关面试题，具体的使用方法和应用场景
+
+##### spring事务传递，源码如果实现的
+
+##### 1-100 三个线程，交替输出，保证顺序
+
+```java
+/**
+ * 1-100，3个线程交替输出
+ * synchronized实现方式
+ */
+public class OutPutThreadTest1 implements Runnable {
+    private static Object lock = new Object();
+    private static int count = 0;
+    int no;
+    public OutPutThreadTest1(int no) {
+        this.no = no;
+    }
+
+    @Override
+    public void run() {
+        while (true) {
+            synchronized (lock) {
+                if (count > 100) {
+                    break;
+                }
+                if (count % 3 == this.no) {
+                    System.out.println(this.no + "--->" + count);
+                    count++;
+                } else {
+                    try {
+                        lock.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                lock.notifyAll();
+            }
+        }
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        Thread t1 = new Thread(new OutPutThreadTest1(0));
+        Thread t2 = new Thread(new OutPutThreadTest1(1));
+        Thread t3 = new Thread(new OutPutThreadTest1(2));
+        t1.start();
+        t2.start();
+        t3.start();
+        t1.join();
+        t2.join();
+        t3.join();
+    }
+}
+```
+
+
+
+### Linux和TCP等偏底层的问题
+
+##### TCP与UDP区别
+
+1.UDP不需要连接，远地的主机在收到UDP报文后也不需要给出任何建议，对应的协议有DNS、TFTP、DHCP、NFS、SNMP等；TCP是面向连接的服务，在传输数据之前必须先建立连接，数据传输完成后要释放连接，对应的应用层协议主要有SMTP、TELNET、HTTP、FTP等
+
+2.TCP提供可靠的传输（有序、无差错、不丢失、不重复），UDP提供不可靠的传输
+
+3.TCP面向字节流的传输，因此它能将信息分割成组，并在接收端将其重组；UDP是面向数据报的传输，没有分组开销
+
+4.TCP提供拥塞控制和流量控制；UDP不提供拥塞控制和流量控制
+
+
+
+##### 多线程如何同步【质数斯达克好像也遇到这个问题】
+
+临界区、互斥区、事件、信号量四种方式
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+##### JVM内存模型
+
+##### mysql，dubbo和其他一些组件要理解到底层实现和源码层面
+
+
+
+##### 深拷贝和浅拷贝
+
+##### default关键字
+
+##### session过期与持久化
+
+
+
+
+
+
+
+
+
+
+
+# 美团
+
+​	1.自我介绍
+
+ 2. 实现一个简单异步事件框架算法，comsum，producter
+
+    异步事件直接用锁实现，生产者消费者并不适用于任何异步场景
+
+    
+
+##### 手写代码，将一个数字字符串，用模拟的方式转换成int数字。
+
+利用ASCII码辅助计算
+
+str.charAt(i) - '0'
+
+
+
+##### 求二叉树最长子结构
+
+https://www.cnblogs.com/yangtong/p/6687078.html
+
+
+
+##### 简单介绍二叉查找树，红黑树，B树，B+树性质
+
+二叉查找树也叫二叉搜索树
+
+红黑树：
+
+1.每个节点都是红色或黑色
+
+2.树的根始终是黑色的
+
+3.没有两个相邻的红色节点
+
+4.从节点（包括根）到其任何后代NULL节点的每条路径都具有相同数量的黑色节点
+
+
+
+
+
+
+
+​	6.手推红黑树查找，删除
+
+​	7. B树，B+树在数据库存储中的作用(有关索引)
+
+	8. 数据库索引的分类，优化方式(聚簇索引，非聚簇索引，覆盖，复合索引等等的概念)
+
+
+
+##### MyISAM 和InnoDB 的区别，实现方式。 
+
+
+
+
+
+##### 设计模式，解释了几个常用的 
+
+观察者模式、代理模式 【认真搞通】
+
+
+
+​	12.HTTP协议 
+
+​	13.一个网站请求从客户端到服务器端的过程 
+
+​	14.JVM，内存模型，GC，类加载器，反射等等的知识。 
+
+​	15.Spring框架的启动流程
+
+​	16.Sring框架IOC和AOP的实现原理，写了一个简易的IOC和一个AOP 
+
+​	17.了解redis的特性，平时是否有使用，使用了哪些数据结构，使用redis做了什么功能等等。 
+
+​	18.集合框架的知识，hashmap，ArrayList，LinkedList源码相关知识，基本整个介绍了一遍，与hastable，concurrenthashmap相互的关联和区别 
+
+​	19.synchronized与lock的区别
+
+​	20.java中的锁，偏向，轻，重，的转换
+
+一、简答题
+
+1.浏览器访问一个网址的时候都有哪些过程（还要了解DNS查找的过程）
+
+2.tcp三次握手，四次分手
+
+二、编程题
+
+1.二分查找
+
+2.树的中序遍历
+
+三、智力题
+
+给你一个5L和3L桶，水无限多，怎么到出4L
+
+## 二面
+
+面试官问我觉得一面面的怎么样，我。。。。然后就看我做的试卷，我竟然连二分查找都写错，面试官说不对，然后我改了改就好了，然后面试官就问还有什么可以优化的地方吗？我只说出来一个。。然后又是自我介绍，说项目，问项目，问基础。差不多也是40分钟。
+
+## 三面
+
+过了几天，收到3面邮，应该是部门boss，也是自我介绍，然后出了两个题。
+
+1）一个n*n的矩阵，按副对角线打印
+
+2）4个瓶盖换1瓶酒，要和150瓶酒，他自己最少多少瓶？然后问了职业规划。感觉有1个小时。
+
+
+
+
+
+有些我记不清了，大概记得的就这些
+
+一面：
+
+  1.给了一道编程题，从方格中的某一点怎么去到另外的点，有多少种走法
+
+  2.数据库联合索引，比如用的是A_B_C,给出几种场景，问在搜索的时候会什么时候会用到索引，讲讲一般怎么对数据库进行优化和explain的用法
+
+
+
+ #####  Integer t = null; int m=t; System.out.println(t) 其实考的是拆箱和装箱，再编译阶段是把字节码加进去，真正进行拆装箱的对坐还是再运行上
+
+```java
+Integer t = null;
+int m = t;             //执行到这里就报错
+System.out.println(t);
+```
+
+局部变量表和操作数栈里面的操作，通过javap去反编译查看
+
+
+
+##### error和Exception区别 列举几个常见的错误
+
+
+
+
+
+
+
+
+
+二面：
+
+ 1.死怼虚拟机，新生代和老年代的区别究竟是什么？垃圾回收器的算法有哪些？垃圾回收期的名字有哪些？stop-the-world究竟干嘛啦
+
+2.数据库的索引为什么用树，对数据库有没有什么了解
+
+3.说说集合有哪几种？hashSet的底层是什么？它不安全再哪里？hashmap为什么不安全？（一定要把那2中情况说清楚，环出现了会有什么后果）？如果让你来做，怎么在不加锁的前提下保证它的安全？？
+
+4.JMQ是怎么保证我一定会收到别人发的消息
+
+5.nio和aio的区别，一定要知道的很清楚，所有的细节
+
+6.new一个线程池的参数
+
+7.2个同步shopId让我来做同步怎么同步
+
+##### 1000000个数，找K个最大
+
+堆排序
+
+9.快速排序
+
+10.spring涉及到的设计模式
+
+三面：
+
+1.了解分布式锁吗，知道怎么用吗
+
+2.知道项目中用到的远程框架它是怎么报警的，比如它怎么能在web页面进行监控，数据怎么上去的，，worker的底层吗，zooker是个什么东西，elastic是个啥
+
+3.平常怎么进行mysql的优化
+
+4.还出了一个概率题，比较简单，我就不说了
+
+5.string是在新生代还是老年代还是永久代，用的虚拟机是什么版本的
+
+6.2个同步shopId让我来做同步怎么同步
+
+7.ibatis和mybatis的不同
+
+8.redis的2中持久化方式
+
+9.除了jsf还了解什么远程框架，说说对比
 
 
 
