--- a/base/多线程.md
+++ b/base/多线程.md
@@ -80,6 +80,26 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 
 
 
+<strong>Semaphore</strong>
+
+信号量是用来控制同时访问特定资源的线程数量，它通过协调各个线程，以保证合理的使用公共资源可以将它比作控制流量的红绿灯，车就是线程，驶入马路就表示线程正在执行，离开马路就表示线程执行完成，看到红灯就表示线程被阻塞，不能执行。
+
+
+
+
+
+<strong>CountDownLatch</strong>
+
+允许一个或多个线程等待其他线程完成操作
+
+
+
+
+
+
+
+
+
 
 
 
