--- a/base/面试.md
+++ b/base/面试.md
@@ -782,6 +782,16 @@ public class OutPutThreadTest1 implements Runnable {
 
 
 
+##### spring starter模式
+
+##### spring profile 和 maven 的profile
+
+
+
+
+
+
+
 
 
 
@@ -822,7 +832,15 @@ public class OutPutThreadTest1 implements Runnable {
 
     异步事件直接用锁实现，生产者消费者并不适用于任何异步场景
 
-    
+
+
+##### 求一个大于部门平均工资的SQL
+
+https://blog.csdn.net/modelsetget/article/details/81974103
+
+
+
+
 
 ##### 手写代码，将一个数字字符串，用模拟的方式转换成int数字。
 
