--- a/base/面试.md
+++ b/base/面试.md
@@ -431,10 +431,27 @@ score表
 | 3    | 2    | 98    |
 | 4    | 2    | 95    |
 
-查出优生的结果（每颗成绩大于90分）
+查出优生的结果（每科成绩大于90分）
 
 <code>select name from stu  as stu where not exists (select 1 from score as s where s.score <=90 and s.`s_id` = stu.id)
 and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
+
+
+
+
+
+有一张员工表，查出哪些大于部门平均工资的结果
+
+![image-20200814102951083](/Users/yangli/Library/Application Support/typora-user-images/image-20200814102951083.png)
+
+<code>select em1.* from employee as em1 ,(select avg(em.salary) as salary,em.dept_id from employee as em group by dept_id) as em2 
+where em1.`dept_id` = em2.`dept_id` and em1.`salary` > em2.`salary`</code>
+
+
+
+
+
+
 
 
 
@@ -826,7 +843,7 @@ public class OutPutThreadTest1 implements Runnable {
 
 # 美团
 
-​	1.自我介绍
+1.自我介绍
 
  2. 实现一个简单异步事件框架算法，comsum，producter
 
@@ -834,11 +851,21 @@ public class OutPutThreadTest1 implements Runnable {
 
 
 
-##### 求一个大于部门平均工资的SQL
+##### 求查出大于部门平均工资的人的明细SQL
+
+笛卡尔积去做查询
 
 https://blog.csdn.net/modelsetget/article/details/81974103
 
 
+
+
+
+SQL标准
+
+* 1992
+
+* 1999
 
 
 
