--- a/base/面试.md
+++ b/base/面试.md
@@ -431,7 +431,7 @@ score表
 | 3    | 2    | 98    |
 | 4    | 2    | 95    |
 
-查出优生的结果（每科成绩大于90分）
+##### 查出优生的结果（每科成绩大于90分）
 
 <code>select name from stu  as stu where not exists (select 1 from score as s where s.score <=90 and s.`s_id` = stu.id)
 and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
@@ -440,7 +440,7 @@ and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
 
 
 
-有一张员工表，查出哪些大于部门平均工资的结果
+##### 有一张员工表，查出哪些大于部门平均工资的结果
 
 ![image-20200814102951083](/Users/yangli/Library/Application Support/typora-user-images/image-20200814102951083.png)
 
@@ -448,6 +448,12 @@ and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
 where em1.`dept_id` = em2.`dept_id` and em1.`salary` > em2.`salary`</code>
 
 
+
+
+
+##### 求出每个部门领工资最多的那个人
+
+![image-20200814112049221](/Users/yangli/Library/Application Support/typora-user-images/image-20200814112049221.png)
 
 
 
