--- a/base/面试.md
+++ b/base/面试.md
@@ -438,6 +438,12 @@ and exists (select 1 from score as s where s.`s_id` = stu.id)</code>
 
 
 
+##### mysql 里面on和where的区别
+
+* on条件是在生成临时表时的使用条件，它不管on中的条件是否为真，都会返回左边表中的记录
+* where是生成临时表后再对临时表进行过滤，条件不为真的就全部过滤掉
+* 多张表（table >= 3）表连接on比where的查询效率要高
+
 
 
 ##### 有一张员工表，查出哪些大于部门平均工资的结果
@@ -454,6 +460,12 @@ where em1.`dept_id` = em2.`dept_id` and em1.`salary` > em2.`salary`</code>
 ##### 求出每个部门领工资最多的那个人
 
 ![image-20200814112049221](/Users/yangli/Library/Application Support/typora-user-images/image-20200814112049221.png)
+
+
+
+##### MySql索引
+
+
 
 
 
@@ -617,7 +629,7 @@ ConcurrentHashMap的原理以及1.7版本和1.8版本的不同。
 
 
 
-6.MySql索引；
+
 
 7.Redis的理解；
 
@@ -670,6 +682,10 @@ ConcurrentHashMap的原理以及1.7版本和1.8版本的不同。
 # 国信杰云
 
 聊的还是比较有意思的
+
+SQL聊的比较多，关于连接之类的
+
+
 
 
 
