--- a/base/面试.md
+++ b/base/面试.md
@@ -385,11 +385,19 @@ JVM内存结构主要有三大块：堆内存、方法区和栈，堆内存是JV
 
 ​	与CMS收集器相比G1收集器有以下特点：
 
- * 空间整合
+1、空间整合
 
-   G1采用标记-压缩算法，不会产生内存空间碎片
+2、G1采用标记-压缩算法，不会产生内存空间碎片
 
-	* 可预测停顿
+3、可预测停顿
+
+MixGC：
+
+* 初次标记  GCRoot对象，Region(Root Region)     STW
+* RootRegion 
+* 并发标记    同CMS，只不过遍历范围缩小
+* 重新标记    同CMS  只不过用SATB算法
+* 复制清理    只选垃圾数较多的region
 
 
 
