--- a/base/多线程.md
+++ b/base/多线程.md
@@ -94,9 +94,19 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 
 
 
+<strong>线程池</strong>
 
+关于线程池线程的分配，要分为IO密集型和CPU密集型，具体介绍可以看相关资料，线程池设置线程数与CPU计算时间和IO操作时间的比例相关，在此可以引出一个配置线程池大小的原则 —— 阻抗匹配原则
 
+> C = CPU数量
+>
+> P = CPU繁忙时间 / 总运行的时间   // 0<P<1
+>
+> T = 所需设置的线程数
+>
+> T = C / P
 
+综上，CPU繁忙的程序越高，设置的线程越少，CPU繁忙时间越低，设置的线程数越高（但也不是无限设置）
 
 
 
