--- a/base/数据结构与算法.md
+++ b/base/数据结构与算法.md
@@ -80,6 +80,21 @@ a[i][j][k]_address = base_address + (i*n*q + j*q + k)*data_type_size
 
 <img src="https://static001.geekbang.org/resource/image/b9/eb/b93e7ade9bb927baad1348d9a806ddeb.jpg?" alt="img" style="zoom:50%;margin-left:-10px;" />
 
+对于单链表的插入操作，第一个结点和后面的结点插入逻辑是不一样的
+
+```c
+//第一个结点插入操作
+if(head == null){
+	head = new_node;
+}
+
+//其他结点插入操作
+new_node->next = p->next;
+p->next = new_node
+```
+
+
+
 
 
 ##### 循环链表
@@ -95,6 +110,54 @@ a[i][j][k]_address = base_address + (i*n*q + j*q + k)*data_type_size
 <img src="https://static001.geekbang.org/resource/image/cb/0b/cbc8ab20276e2f9312030c313a9ef70b.jpg" alt="img" style="zoom:50%;margin-left:-10px;" />
 
 从结构上来看，双向链表可以支持O(1)时间复杂度的情况下找到前驱结点，正是这样的特点，也使双向链表在某些情况下的插入与删除等操作都比单链表简单、高效。
+
+
+
+##### 双向循环链表
+
+<img src="https://static001.geekbang.org/resource/image/d1/91/d1665043b283ecdf79b157cfc9e5ed91.jpg" alt="img" style="zoom:50%;margin-left:-10px;" />
+
+Java中LinkedHashMap实现的双向循环链表
+
+双向链表就是一种以空间换时间的思想
+
+
+
+##### 带头链表
+
+<img src="https://static001.geekbang.org/resource/image/7d/c7/7d22d9428bdbba96bfe388fe1e3368c7.jpg?" alt="img" style="zoom:50%;margin-left:-10px;" />
+
+在进行单链表的插入与删除的时候，往往需要对头、尾结点做特殊处理，所以这里加了一个哨兵结点，方便统一方法处理
+
+
+
+> 对于指针的理解：对某个变量赋值给指针，实际上是将这个变量的地址赋值给指针，或者反过来说，指针中存储了这个变量的内存地址，指向了这个变量，指向了这个变量，通过指针就能找到这个变量
+
+
+
+
+
+
+
+单链表存储的数据 要判断是否是回文串：
+
+>  大部分同学都说到了方法一：半栈法
+> 　　　　　１．用快慢两个指针遍历，同时用栈copy慢指针指向的data。
+> 　　　　　２．完成后，慢指针指向中间节点，耗时为N/2.
+> 　　　　　３．最后用pop栈中的data和慢指针指向的data比较，耗时也是N/2.
+>      所以时间复杂度为：Ｏ(N)，空间复杂度因栈额外存储了一半的data，故为O(N/2)
+>
+> 方法二：全栈法
+> 　　　　　１．全部遍历，data压栈，额外空间消耗N
+>           ２．再次全部遍历取data，同时pop栈取data, 二者比较，时间消耗2N
+>      所以时间复杂度为O(3N)，空间复杂度为O(N)
+>      该法算法最简单，但复杂度高。可以用栈存储节点指针，而非data来改进。
+>
+> 方法三：硬干法
+>
+>    　　　　　1. 一个指针从头取data，另一个指针遍历到底取data，比较二者
+>            ．删除尾部节点，重复１．
+>            　　　时间复杂度高达　O(N^2)，空间复杂度却最低Ｏ(1)
 
 
 
