--- a/base/数据结构与算法.md
+++ b/base/数据结构与算法.md
@@ -135,7 +135,18 @@ Java中LinkedHashMap实现的双向循环链表
 
 
 
+链表操作：
 
+* 单链表反转
+  * 就地反转法
+  * 新建链表，头结点插入法
+
+* 链表中环的检测
+* 两个有序链表的合并
+* 删除链表倒数第n个结点
+* 求链表的中间结点
+
+练习题LeetCode对应编号：206，141，21，19，876。大家可以去练习，另外建议作者兄每章直接给出LC的题目编号或链接方便大家练习。
 
 
 
@@ -158,6 +169,18 @@ Java中LinkedHashMap实现的双向循环链表
 >    　　　　　1. 一个指针从头取data，另一个指针遍历到底取data，比较二者
 >            ．删除尾部节点，重复１．
 >            　　　时间复杂度高达　O(N^2)，空间复杂度却最低Ｏ(1)
+
+
+
+
+
+### 栈
+
+从栈的操作特性来看，它是一种“操作受限”的线性表，只允许在一端插入和删除数据。
+
+栈可以用数组和链表实现，数组实现的栈叫顺序栈，用链表实现的栈叫链式栈
+
+
 
 
 
