--- a/base/思考.md
+++ b/base/思考.md
@@ -243,11 +243,23 @@ spring.factories
 
 
 
-Http中PUT和POST：
+##### Http中PUT和POST：
 
-PUT
+>  参考：https://www.oschina.net/translate/put-or-post
+
+PUT 状态统一性在HTTP规范是一个重要的概念。它规定对于执行多次相同的HTTP请求，处理服务端的资源的状态是相同的。GET、POST、HEAD、PUT与DELETE都具有这样的特性，但POST没有。
+
+更新的时候，由于PUT是幂等的，所以要发送所有可能的值
+
+POST可以更新全部或一部分值
 
 
+
+### JMM（多线程、并发）
+
+每个线程的工作内存都是独立的，线程操作数据只能在工作内存中进行，然后刷回主存。
+
+JMM只能保证基本的原子性，如果要保证一个代码的原子性，提供了monitorenter和monitorexit两个字节码指令，也就是synchronized关键字
 
 
 
@@ -266,6 +278,12 @@ PUT
 IO通信线程中读写缓存时建议用<strong style="color:red">DirectByteBuffer</strong>（涉及大量的IO数据读写）
 
 后端业务消息的解编码模块使用<strong style="color:red">HeapByteBuffer</strong>
+
+
+
+分代回收算法  -> (新生代，老年代，持久代)
+
+常见的垃圾回收器，适用于不同的场景  -> 串行、并行、吞吐量优先、并发标记清除
 
 
 
@@ -706,3 +724,17 @@ Linux内核设计与实现
 memcache全面剖析
 快学Scala
 剑指offer
+
+
+
+
+
+
+
+```
+//新增分段订单号对应关系
+OrderSegment orderSegment = new OrderSegment();
+orderSegment.setCreateTime(currentDate);
+orderSegment.setUpOrderId(Long.parseLong(orderNo));
+orderSegmentMapper.insert(orderSegment);
+```
