--- a/base/多线程.md
+++ b/base/多线程.md
@@ -108,7 +108,7 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 
 综上，CPU繁忙的程序越高，设置的线程越少，CPU繁忙时间越低，设置的线程数越高（但也不是无限设置）
 
-
+线程池顶层接口Executor提供了一种思想：将任务提交和任务执行进行解耦
 
 
 
