--- a/base/思考.md
+++ b/base/思考.md
@@ -88,6 +88,8 @@ Mysql MHA架构 - 脑裂问题，Master - Slave之间是基于Binlog的异步复
 
 
 
+mysql5.7对于JSON数据类型（文档查询的支持），支持“真正的”并行复制功能。
+
 
 
 ### Java基础
@@ -101,6 +103,16 @@ Mysql MHA架构 - 脑裂问题，Master - Slave之间是基于Binlog的异步复
 日期LocalDate
 
 时间LocalTime
+
+
+
+##### 关键字
+
+transient  所修饰的变量不会被序列化（如类似密码之类的变量）
+
+Volatile    保持所修饰的变量内存可见性、防止指令重排序
+
+
 
 
 
@@ -169,6 +181,16 @@ a[i][j][k]_address = base_address + (i*n*q + j*q + k)*data_type_size
 
 
 
+##### 面向对象
+
+面向对象几个特性：封装、继承、多态
+
+封装：一种原则、规范、一种标准
+
+继承：它是一种方向、一种特征
+
+多态：基于某种特征而带来的某种能力
+
 
 
 ##### 异步编程
@@ -203,6 +225,21 @@ CompletableFuture
 Integer aa = new Integer(999)  ，对象aa的大小是16字节
 
 对象大小 = 头【数组（4） 、 标记（8）、或对象数组（4）】 + 内容
+
+
+
+##### Java中创建对象
+
+java中创建对象不是一个原子操作
+
+```java
+//1：分配对象的内存空间
+memory = allocate();
+//2：初始化对象
+ctorInstance(memory);  
+//3：设置instance指向刚分配的内存地址
+instance = memory;     
+```
 
 
 
@@ -422,6 +459,12 @@ JAVA中可以通过<strong>-XX:MaxDirectMemorySize</strong>来指定最大的堆
 
 
 
+<strong>缓存的一致性导致存在伪共享问题？</strong>
+
+
+
+
+
 ##### Redis
 
 Redis-cluter的高可用、分片、可扩展 性能
@@ -438,7 +481,19 @@ https://www.cnblogs.com/tongxuping/p/12356766.html
 
 
 
+Redis与Mysql数据一致性问题：
 
+高并发的情况更新数据库（删除缓存）或者删除缓存（更新数据库）会出现数据不一致的情况
+
+解决方案：
+
+* 先删除缓存，再更新数据库
+
+  延迟双删
+
+* 先更新数据库，再删除缓存
+
+  这种情况可以根据如果对于数据一致性要求较高的话可以监听数据库修改的binlog日志去删除缓存
 
 
 
@@ -729,12 +784,10 @@ memcache全面剖析
 
 
 
+《激清燃烧的岁月》、《军歌嘹亮》、《集结号》
 
 
-```
-//新增分段订单号对应关系
-OrderSegment orderSegment = new OrderSegment();
-orderSegment.setCreateTime(currentDate);
-orderSegment.setUpOrderId(Long.parseLong(orderNo));
-orderSegmentMapper.insert(orderSegment);
-```
+
+
+
+
