--- a/base/多线程.md
+++ b/base/多线程.md
@@ -84,6 +84,8 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 
 信号量是用来控制同时访问特定资源的线程数量，它通过协调各个线程，以保证合理的使用公共资源可以将它比作控制流量的红绿灯，车就是线程，驶入马路就表示线程正在执行，离开马路就表示线程执行完成，看到红灯就表示线程被阻塞，不能执行。
 
+主要方法是acquire和release，acquire每调用一次，许可证数量就减1，如果许可证数量为0，则获取失败，线程进入AQS的等待队列中.
+
 
 
 
@@ -116,13 +118,4 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 
 
 
-
-
-
-
-
-
-
-
-
-
+高并发：问题，超员问题处理？
