--- a/base/多线程.md
+++ b/base/多线程.md
@@ -68,6 +68,36 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 
 
 
+单一设计原则：高内聚、低耦合。 程序设计模块与模块之间职责分离.
+
+一致性问题解决方法：
+
+排队（例如：锁、互斥量、管程、屏障等）  — 额外开销
+
+投票（例如：Paxos、Raft等）		               — 额外开销
+
+避免不一致：
+
+例如ThreadLocal等
+
+##### <font color="red">四种场景：</font>
+
+持有资源 — 持有线程
+
+线程一致
+
+线程安全
+
+并行计算
+
+
+
+理解并发、竞争条件、临界区等概念
+
+
+
+
+
 <strong>ReadWriteLock</strong>
 
 如果用ReentrantLock是可以实现线程A在写数据的时候 B在读数据造成的数据不一致问题，
@@ -111,6 +141,16 @@ JDK较早版本OS的资源 互斥量  用户态 -> 内核态的转换 重量级 
 综上，CPU繁忙的程序越高，设置的线程越少，CPU繁忙时间越低，设置的线程数越高（但也不是无限设置）
 
 线程池顶层接口Executor提供了一种思想：将任务提交和任务执行进行解耦
+
+
+
+
+
+##### 可重入锁
+
+可重入锁又名递归锁，在同一线程在外层方法获取锁的时候，再进入该线程的内层方法会自动获取锁
+
+<img src="https://pic4.zhimg.com/80/v2-6226ac68b3e346614b6438bcfacd90f3_1440w.jpg?" alt="img" style="zoom:100%;margin-left:-10px;" />
 
 
 
