--- a/finance/穷查理宝典.md
+++ b/finance/穷查理宝典.md
@@ -4,6 +4,106 @@
 
 《凯恩斯传记》
 
+加尔文-特里林 《父亲的密信》
+
+* 自然
+
+牛顿《自然哲学的数学原理》
+
+约翰-葛瑞本 《深奥的简洁》
+
+理查德-道金斯 《自私的基因》
+
+达尔文 《物种起源》
+
+
+
+* 人类
+
+贾雷德-戴蒙德 《第三种黑猩猩》、《枪炮、病菌与钢铁》、《崩溃》
+
+史蒂芬-平克 《语言本能》
+
+马特-里德利 《基因组》
+
+加勒特-哈丁 《生活在极限之内》
+
+阿瑟-赫尔曼 《苏格兰：现代世界文明的起点》
+
+
+
+* 经济
+
+戴维-S-兰德斯 《国富国穷》
+
+伯纳德-曼德维尔《蜜蜂的寓言》
+
+本杰明-M-弗里德曼 《经济增长的道德意义》
+
+大卫-李嘉图 《政治经济学及赋税原理》
+
+格里高利-曼昆 《经济学原理》
+
+约翰-肯尼思-加尔布雷思 《富裕社会》
+
+亚当斯密 《国民财富的性质和原因的研究》 也就是《国富论》
+
+
+
+* 投资
+
+菲利普-A-费舍《怎么选择成长股》
+
+劳伦斯-A-克尼厄姆 《向格雷厄姆学思考，向巴菲特学投资》
+
+罗伯特-哈格斯特朗 《巴菲特的投资组合》
+
+本杰明-格雷厄姆 《聪明的投资者》
+
+罗杰-洛温斯坦 《拯救华尔街》
+
+弗兰克-帕特诺伊 《诚信的背后》
+
+
+
+* 人生
+
+狄更斯 《圣诞欢歌》
+
+毛姆 《人生的枷锁》
+
+欧文-斯通 《筚路蓝缕的先行者》
+
+富兰克林 《富兰克林的自传》
+
+赫尔伯特-A-西蒙 《我生活的种种模式》
+
+荣-切尔诺 《洛克菲勒传：全球首富的创富秘诀》
+
+理查德-费曼 《别闹了，费曼先生！》
+
+约翰-班杨 《天路历程》
+
+
+
+* 处世
+
+罗杰-费希尔等《谈判力》
+
+罗伯特-西奥迪尼 《影响力》
+
+杰克-韦尔奇《赢》
+
+安迪-希尔 《要快，但别赶！》
+
+安迪-格鲁夫 《只有偏执狂才能生存》
+
+西塞罗 《论老年论友谊论责任》
+
+孔子 《论语》  辜鸿铭
+
+
+
 
 
 维护友谊：“查理，你要是借了别人的车，别忘了加满油再还给人家”
@@ -15,3 +115,35 @@
 遇事要抱怀疑态度，甚至逆其道而行
 
 人要么盲目地随大流，要么太过自以为是。“疯狂”、“茫然”、“傲慢”、“自满” —— 我们知道这是他认为我们应该避免的形容词
+
+
+
+生活不仅仅是精明地积累财富
+
+妒忌真的是一种愚蠢的罪行，因为它是仅有的一种你不可能得到任何乐趣的罪行。它只会让你痛苦不堪，不会给你带来任何乐趣。你为什么要妒忌呢？
+
+每天起床的时候，争取变得比你以前更聪明一点。
+
+避免欠债
+
+拥有常识不但意味着有能力辨认智慧，也意味着有能力拒绝愚蠢
+
+我们的投资规矩是等待好球的出现。
+
+Beta系数、现代组合投资理论等等 —— 这些在我看来都没什么道理。我们想要做到的是，用低廉的价格，甚至是合理的价格，来购买那些拥有可持续竞争优势的企业。
+
+我们偏向于把大量的钱投在我们不用再另作决策的地方。
+
+当时有个笑话：我买股票是为了晚年，这种方法很灵验 —— 不到六个月，我就觉得自己像个老头了！
+
+成为伟大投资者的诀窍在于不断学习
+
+
+
+复利思维、定量、决策树理论、会计学
+
+那些来自硬科学和工程学的思维模型是地球上最可靠的思维模型
+
+
+
+沃伦和我都不觉得我们在高科技行业拥有任何大的优势。实际上，我们认为我们很难理解软件、电脑芯片等科技行业的发展的实质。所以我们尽量避开这些东西，正视我们个人的知识缺陷。
