--- a/基础/JAVA/奈学JAVA学习/01反射.md
+++ b/基础/JAVA/奈学JAVA学习/01反射.md
@@ -13,4 +13,68 @@
 
 
 
-类加载机制：
+类加载的三部曲：加载、连接、初始化
+
+加载
+
+加载.class文件，主要有以下几个途径：
+
+* 从本地的文件系统中加载
+* 通过网络下载
+* 从zip.jar包加载.class文件
+* 从存储中间件中加载（数据库、缓存...）
+* 在JVM运行期间通过动态字节码重组的方式（ASM）
+
+
+
+连接
+
+连接就是将已经读入到内存的类的二进制数据合并到JVM的运行环境中，连接过程主要有三个阶段
+
+* 类的验证，对类的文件进行检查（版本号、模数）以保证.class符合JVM规范
+* 类的准备，分配常量池空间，解析常量池，静态变量的分配，但不会初始化，只会给默认值
+* 类的解析，解析父类，解析接口，解析Field，解析方法列表（包括栈、字节码表、异常表、局部变量表、运行指针），把类二进制的符号引用转变为直接引用
+
+
+
+初始化
+
+JVM执行类的初始化语句，为类的静态变量赋值
+
+* 如果这个类还没有被加载和连接，那就先进行加载和连接
+* 如果这个类存在父类，并且父类还没有初始化，那就先初始化父类
+* 如果类中存在初始化语句（static）块，依次执行初始化语句
+
+
+
+类完成初始化时机
+
+* 创建类的实例 new XXXClass() || Class.newInstance() || constructor.newInstance()
+* 访问某种的某个静态变量，或者对静态变量进行赋值
+* 调用类的静态方法
+* Class.forName("包类名")，因为forName里有一个init参数是true
+* 完成子类的初始化，也会完成对本类的初始化（接口除外）
+* 该类是程序引导入口（main入口或者test入口）
+
+
+
+
+
+
+
+常识：
+
+```java
+public class FatherClass {
+
+    //类变量也叫全局变量  存储在方法区
+    public static int a = 11;
+
+    //常量 存储在常量池
+    public final static int FINAL_B = 22;
+
+    //成员变量也叫实例变量 Object 存储在堆
+    public int c = 33;
+}
+```
+
