--- a/基础/JAVA/面试/基础概念.md
+++ b/基础/JAVA/面试/基础概念.md
@@ -215,10 +215,23 @@ System.out.println("input:" + s);
 
 线程、进程
 
-同类的多个线程共享同一块内存空间和一组系统资源，线程也被称之为轻量级进程
+* 线程：线程是一个比进程更小的执行单位。同类的多个线程共享同一块内存空间和一组系统资源，线程也被称之为轻量级进程
 
 
 
 既然有了字节流，为什么还要有字符流？
 
 字符流是由Java虚拟机将字节转换得到的，这个过程非常耗时，并且如果我们不知道编码类型就很容易出现乱码问题，所以I/O流就干脆提供了一个直接操作字符的接口，方便我们平时对字符进行流操作。如果音频文件、图片等媒体文件用字节流比较好，如果涉及到字符的话使用字符流比较好。
+
+
+
+
+
+##### 名词解释
+
+TPS（Transactions Per Second）
+中文翻译“每秒事务处理量”，即服务器每秒处理的事务数。TPS 中的 T 包含 「消息接收」、「消息处理（例如：数据库操作）」、「响应」 三个步骤，即一个完整事务。
+QPS（Query Per Second）
+是对一个特定的查询服务器在规定时间内所处理流量多少的衡量标准，在因特网上，作为域名系统服务器的机器的性能经常用每秒查询率来衡量。对应 fetches/sec，即每秒的响应请求数，也即是最大吞吐能力。
+RT（Response Time）
+事务从请求到系统处理完成后返回结果的时间，即响应时间。
