--- a/基础/JAVA/面试/集合框架.md
+++ b/基础/JAVA/面试/集合框架.md
@@ -3,6 +3,10 @@
 * HashMap：
 
   JDK1.8之前HashMap是由数组 + 链表组成的，数组是HashMap的主体，链表则是主要为了解决哈希冲突而存在的（”拉链法“解决冲突）。JDK1.8以后在解决哈希冲突时有了较大的变化，当链表长度大于阈值（默认为8）（将链表转换成红黑树前会判断，如果当前数组的长度小于64，那么会选择先进行数组扩容，而不是转换成红黑树）时，将链表转换成红黑树，以减少搜索时间。
+  
+* LinkedHashMap：
+
+  底层仍然是拉链式散列结构
 
 
 
@@ -142,3 +146,11 @@ static final int MIN_TREEIFY_CAPACITY = 64;
 CopyOnWriteArrayList：可以看作是线程安全的ArrayList，在读多写少的场合非常好
 
 ConcurrentLinkedQueue：高效并发队列，使用链表实现。可以看作是一个线程安全的LinkedList，这是一个非阻塞队列
+
+
+
+
+
+
+
+快速失败(fail-fast)：遍历集合的时候 修改了集合中的变量的值
