--- a/基础/JAVA/奈学JAVA学习/01反射.md
+++ b/基础/JAVA/奈学JAVA学习/01反射.md
@@ -58,6 +58,18 @@ JVM执行类的初始化语句，为类的静态变量赋值
 
 
 
+java.lang.Class对象
+
+ <img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220103152541195.png" alt="image-20220103152541195" style="zoom:50%;" />
+
+
+
+JDK的源码和JVM的源码区别
+
+JDK就是我们java中的源码
+
+JVM就是java里面native方法的源码
+
 
 
 
