--- a/finance/慢慢变富.md
+++ b/finance/慢慢变富.md
@@ -81,3 +81,302 @@
 * 不在行业内而”相对胜出“的不投 —— 格力电器、腾讯、伊利、双汇等公司这些企业在充分竞争中”冲杀“出来，当它们在行业内确定了自己的领军地位之后，我们再投资，一点儿也不迟。
 * 处在快速易变行业的不投
 * 看不懂的不投
+
+
+
+市场经济特许经营权的企业的根本特征：
+
+* 产品或服务被人需要
+* 产品或服务不可替代（有时是心理层面的）
+* 产品或服务的价格自由（企业拥有定价权，不受政府管制）
+* 能容忍无能的管理层
+* 能有效抵御通胀
+
+
+
+具有市场经济特许经营权的企业固然是我们优先选择的标的，但是一个企业所处的行业，以及它的行业属性，作者认为也是不可忽视的，甚至是很重要的
+
+
+
+巴菲特在2007年致股东的信中谈到了3类长期存储账户
+
+（1）梦幻般的生意
+
+（2）良好的生意
+
+（3）糟糕的生意
+
+（1）-> 可以对标贵州茅台
+
+（2）-> 即投资每1美元可以创造超过1美元的价值，衡量标准是长期净资产收益率。可以对标万科
+
+（3）-> 对于那些烧钱机器般的企业，坚决回避（可以对标国内的一些钢铁企业）
+
+
+
+
+
+护城河：
+
+* 成本
+* 品牌：茅台？ 招商银行？
+* 技术与专利
+* 服务
+* 质量
+* 价格
+
+但是护城河需要注意的：
+
+* 护城河是多样化的
+* 警惕护城河陷阱 - 柯达、IBM、通用、安然、四川长虹、黄山旅游
+* 有成长性的护城河更重要
+* 一家企业的护城河再牢固，也并不是一成不变的。一劳永逸式的投资是没有的，定期进行护城河评估，是投资者需要做的阶段性作业
+
+
+
+苹果、谷歌、微软、亚马逊、腾讯、脸书、阿里巴巴这些科技类公司，实际上更具有一种平台生态型公司的特点
+
+
+
+选股”5性“标准：
+
+* 长寿性
+
+* 稳定性
+
+* 盈利性
+
+* 成长性
+
+* 有德行（性）
+
+  管理层的年薪水平，如果业绩确实做得好，年新高可以理解；但是如果没有做什么业绩，年薪却又高的离谱，这样的企业可能就不是好的投资标的
+
+
+
+价值股与成长股
+
+价值股有以下特征：
+
+* 企业在行业内经过了剧烈的竞争而称为行业的中的”王者“
+* 行业发展已经进入平缓期，或者只进行存量调整
+* 它们的净利率曲线是越来越向上的
+* 企业的财务报表上已经体现出丰富的自由现金流，它们甚至钱多得没处花
+* 企业派发较为优厚的红利
+* 长期净资产收益率，如5年以上的，保持在15%以上
+* 市值比较大
+* 市场普遍看法是企业已经相对比较成熟，那么市场先生会一直给予较低的市盈率
+
+
+
+每股收益 = 净资产收益率 * 每股资产净值
+
+为什么净资产收益率这个指标这么重要？
+
+* 它类似股东的资产回报率指标
+* 它可以衡量企业利润再投资的回报水平
+
+
+
+净资产收益率=净利润/净资产，净资产收益率=销售净利润✖️资产周转率✖️权益乘数
+
+销售净利率=净利润/收入，资产周转率=收入/总资产，权益乘数=总资产/净资产
+
+
+
+巴菲特发表《通货膨胀如何欺诈股票投资者》说企业若想提高净资产收益率，至少需要做到以下中的一点：
+
+* 提高资产周转率
+* 有更便宜的杠杆
+* 有更高的杠杆率
+* 降低企业所得税
+* 有更高的营业利润率
+
+
+
+现金流足够重视，有两个指标引起注意：
+
+* 净利润含金量，即经营活动产生的现金流量净额与净利润的比值。比值较理想的是大于100%，达到70%左右是属于比较健康
+* 自由现金流，将经营活动产生的现金流量净额与投资活动产生的现金流量净额相加，即可得到一家企业的自由现金流
+
+
+
+在大健康领域：同仁堂、云南白药、片仔癀、东阿阿胶、马应龙、白云山、广誉远等中医药知名品牌
+
+天士力的复方丹参丸、通化东宝的胰岛素、华东医药的阿卡波糖等
+
+
+
+# 估值
+
+一家企业的内在价值是其未来现金流的折现值
+
+
+
+##### 市销率
+
+市销率（PS）是现在的每股价格与每股销售收入的比
+
+##### 市净率
+
+市净率是把股票的市值价值和当期的资产负债表的账面价值（也就是所有者权益或净资产）比较
+
+”要牢牢记住金融类公司股东以低于账面价值交易（市净率低于1.0）常常预示公司正在经历某种麻烦，所以在你投资之前要仔细研究这家公司的账面价值有多可靠“
+
+##### 市盈率
+
+静态市盈率：当前股票价格除以上一年度的每股净利润，或者用当前一家公司的总市值除以上一年度的净利润（当然最好是运用扣非净利润）所得的比值
+
+动态市盈率：一家公司正在经营的年度年底的净利润（每股收益），与当前的总市值（或当前股价）相除所得的比值
+
+滚动市盈率：过去4个季度的净利润总和与当前的总市值（或过去4个季度的每股利润与当期那的股票价格）相除所得的比值
+
+##### 市盈率相对盈利成长比率（PEG）
+
+市盈率除以盈利增长率所得的比值
+
+
+
+影响一家企业未来内在价值的4个关键因素：
+
+* 时间周期
+
+​	同仁堂、片仔癀这样的企业为什么长时间享有高市盈率，甚至很少有市盈率低于30倍的时候（当然也与其成长性有关）
+
+* 自由现金流
+
+​	关于自由现金流的理解，有一个关键问题，就是我们不仅要考虑它过去产生的自由现金流，还要考虑它未来产生的自由现金流，或者说它未来能够释放自由现金流的能力
+
+* 折现率
+* 管理层（管理层也影响着息票）
+
+
+
+巴老的投资奥秘：
+
+（1）具有较强的特许经营权
+
+（2）高于平均值的净资产收益率
+
+（3）相对较小的资金投入（有资金投入也要符合”1美元原则“）
+
+（4）释放现金流的能力（未来自由现金流越多越好）
+
+（5）诚实、能干的管理层
+
+
+
+价值投资的精髓：投资一家企业就是买入其未来现金流的折现值，或者说衡量一家企业内在价值的唯一标准就是其未来现金流的折现值
+
+
+
+估值：
+
+* 整体估值法
+
+​	看它的商业模式与赢利水平，并考虑它所处的行业空间等因素
+
+* 简单推算法
+
+​	市盈率是我们投资年限的回报率。如10倍市盈率，意味着投资一家公司理论上10年收回成本
+
+​	市盈率的倒数是我们年收益率或盈利收益率，如10倍市盈率，意味着年收益率达到10%，20倍市盈率，意味着年收益率达到5%
+
+​	我们假设一家企业的内在价值由市值决定的 = 净利润 * 市盈率
+
+​	彼得林奇：不太会估值的投资者要记住一点，即千万别买市盈率过高的股票。
+
+​						市盈率对于强周期性的企业不好用。相反，市盈率高了或许正是行业出现买点之时，而市盈率低了恰恰是卖出之机
+
+​	市盈率对于困境反转的企业往往”失灵“
+
+​	恒瑞医药研发支出费用化之前能享受40倍+ 的估值，现在已经全部资本化后就只能享受20-30倍估值了
+
+* 透支一年买入法
+
+​	先与股票谈恋爱，先通过分析基本面觉得十分优秀，买入部分，再逐步深入了解后买入
+
+* 股息率估值法
+
+​	衡量的标准就是一家企业的股息率高过长期国债收益水平，再结合企业品质、历史分红水平、未来成长空间等基本面因素评估，就能够得出结论
+
+
+
+### 抢抓”三大机遇“
+
+一是整体大熊市、大股灾期间
+
+二是个别优秀企业遭遇”黑天鹅“事件，即”王子“”一时“落难
+
+三是长期牛股阶段性调整之时，比如调整30%左右
+
+​	长牛股调整30%、20%只是一个大致的概念，利用长牛股调整到重要均线，如30日、60日、120日均线以下，成交量极端萎缩之时，可以定量的分析择机买入
+
+
+
+
+
+### 安全边际
+
+一类是静态的安全边际，可以运用市盈率、市净率以及股息率等估值工具进行衡量
+
+另一类是动态的安全边际，所谓动态就是发展着的、成长着的、是能够在自己可以预期的未来看出大概的。 这种动态甚至是”近的迷茫，远的清楚“
+
+
+
+
+
+投资者的长期持有定力究竟从何而来？
+
+* 来自对我们国家长远发展的信心
+* 来自对股市根本规律的把握
+
+​	个人投资者作为个人家庭金融资产的管理人，肩并着个人家庭金融资产保值、增值的重要责任，甚至肩负着将金融资产传承给下一代的重要责任。能够看清股市长远发展规律的投资者，承担着管理个人家庭金融资产的责任，更应该将自己变成优秀企业股权资产的长期拥有者。
+
+* 来自坚定的投资哲学、投资信仰
+* 来自对企业的深刻理解
+
+
+
+”波动不是风险“
+
+真正的风险不外有二：一时本金的永久性损失，二是回报不足
+
+
+
+长期持有究竟何时卖出：
+
+* 发现买错了，要立即改正
+* 公司基本面发生根本性变化。根本性变化是指公司的竞争地位被取代、商业模式被颠覆、提供的产品和服务已过时等，一时的增长放缓当具体研判
+* 股价太疯狂。疯狂程度可结合市场整体牛熊进行具体研判
+* 找到了”性价比“更好的投资标的
+
+
+
+什么是价值投资呢？  作者的理解是：股市上有些钱是我们赚不了的，因为我们不懂；有些钱是我们不能赚的，因为我们不敢；我们只是在自己明白的基础上赚自己该赚的钱而已
+
+
+
+**投资不要有锚定效应！**
+
+
+
+还有一个错过的买点：优秀企业一时增长放缓，市场先生给予了大幅度的”估值杀“，此时往往是好的投资机会
+
+
+
+
+
+![image-20220108154649940](/Users/yangli/Library/Application Support/typora-user-images/image-20220108154649940.png)
+
+
+
+![image-20220108154710048](/Users/yangli/Library/Application Support/typora-user-images/image-20220108154710048.png)
+
+
+
+![image-20220108154731934](/Users/yangli/Library/Application Support/typora-user-images/image-20220108154731934.png)
+
+
+
+![image-20220108154753157](/Users/yangli/Library/Application Support/typora-user-images/image-20220108154753157.png)
