--- a/基础/JAVA/奈学JAVA学习/01反射.md
+++ b/基础/JAVA/奈学JAVA学习/01反射.md
@@ -31,7 +31,7 @@
 
 连接就是将已经读入到内存的类的二进制数据合并到JVM的运行环境中，连接过程主要有三个阶段
 
-* 类的验证，对类的文件进行检查（版本号、模数）以保证.class符合JVM规范
+* 类的验证，对类的文件进行检查（**版本号、模数**）以保证.class符合JVM规范
 * 类的准备，分配常量池空间，解析常量池，静态变量的分配，但不会初始化，只会给默认值
 * 类的解析，解析父类，解析接口，解析Field，解析方法列表（包括栈、字节码表、异常表、局部变量表、运行指针），把类二进制的符号引用转变为直接引用
 
