--- a/基础/JAVA/面试/泛型.md
+++ b/基础/JAVA/面试/泛型.md
@@ -116,11 +116,11 @@ Java泛型中的通配符 T，E，K，V，?
 
 
 
-?  无界通配符
+**?  无界通配符**
 
-上界通配符 <? extends E>
+**上界通配符 <? extends E>，有上界限制：不能使用add方法，频繁往外读取内容的，适用**
 
-下界通配符 <? super E>
+**下界通配符 <? super E>，有下界限制：不能使用get方法，经常往里插入的，适用**
 
 
 
