--- a/基础/JAVA/面试/集合框架.md
+++ b/基础/JAVA/面试/集合框架.md
@@ -143,7 +143,11 @@ static final int MIN_TREEIFY_CAPACITY = 64;
 
 集合 - 线程安全
 
-CopyOnWriteArrayList：可以看作是线程安全的ArrayList，在读多写少的场合非常好
+CopyOnWriteArrayList：可以看作是线程安全的ArrayList
+
+​	在**读多写少**的场合非常好，比如白名单、黑名单、商品类目的访问和更新场景
+
+​	会出现数据一致性问题，能达到最终一致性
 
 ConcurrentLinkedQueue：高效并发队列，使用链表实现。可以看作是一个线程安全的LinkedList，这是一个非阻塞队列
 
