--- a/基础/JAVA/读书/凤凰架构.md
+++ b/基础/JAVA/读书/凤凰架构.md
@@ -990,3 +990,121 @@ Kubernetes Master → kubelet → KubeGenericRuntimeManager → containerd → r
 ### 以容器构建系统
 
 分布式系统里应用的概念已不再等同于进程，此时的应用需要多个进程共同协作，通过集群的形式对外提供服务，以虚拟化方法实现这个目标的过程就被称为容器编排
+
+
+
+容器组的概念：多个容器放到同一个Pod中即可解决。扮演容器组的角色，满足容器共享名称空间的需求。它们将默认共享：
+
+UTS名称空间：所有容器都有相同的主机名和域名
+
+网络名称空间：所有容器都共享一样的网卡、网络栈、IP地址等等，因此同一个Pod中不同容器占用的端口不能冲突
+
+IPC名称空间：所有容器都可以通过信号量或者POSIX共享内存等方式通信
+
+时间名称空间：所有容器都共享相同的系统时间
+
+
+
+k8s中一切皆以资源
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220108115523491.png" alt="image-20220108115523491" style="zoom:50%;margin-left:-1px" />
+
+
+
+* 容器（Container）：延续了自Docker以来一个容器封装一个应用进程的理念，是镜像管理的最小单位
+* 生产任务（Pod）：补充了容器化后缺失与进程组对应的”容器组“的概念，Pod中容器共享UTS、IPC、网络等名称空间，是资源调度的最小单位
+* 节点（Node）：对应于集群中的单台机器，这里的机器即可以是生产环境中物理机，也可以是云计算环境中的虚拟节点，节点是处理器和内存等资源的资源池，是硬件单元的最小单位
+* 集群（Cluster）：对应于整个集群，k8s提倡理念是面向集群来管理应用。当你要部署应用的时候，只需要通过声明式API将你的意图写成一份元数据（Manifest），将它提交给集群即可，而需关心它具体分配到哪个节点（尽管通过标签选择器完全可以控制它分配到阿哥节点，但一般不需要这样做）、如何实现Pod间通信、如何保证韧性与弹性，等等，所以集群是处理元数据的最小单位
+* 集群联邦（Federation）：对应于多个集群，通过联邦可以统一管理多个k8s集群，联邦的一种常见应用是支持跨可用区域多活、跨地域容灾的需求
+
+
+
+控制器模式是继资源模型之后，另一个k8s核心理念
+
+让编排系统在这些服务出现问题，运行状态不正确的时候，能自动将它们调整成正确的状态，叫做控制回路
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220108230212076.png" alt="image-20220108230212076" style="zoom:50%;margin-left:-1px" />
+
+学习k8s更好的方式是站在解决问题的角度去理解为什么k8s要设计这些资源和控制器，理解为什么这些资源和控制器会被设计成现在这种样子
+
+
+
+Kustomize工具：
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220109173154979.png" alt="image-20220109173154979" style="zoom:50%;margin-left:-1px" />
+
+
+
+Helm与Chart
+
+更具系统性的管理和封装应用的解决方案
+
+如果说K8s是云原生操作系统的话，那Helm就要成为这个操作系统上面的应用商店与包管理工具
+
+缺点：Helm无法很好地管理这种有状态的依赖关系
+
+
+
+Operator与CRD
+
+把应用封装为另一种更高层次的资源，再把k8s的控制器模式从面向于内置资源，扩展到了面向所有自定义资源，以此来完成对复杂应用的管理
+
+
+
+无状态应用天生就是高可用的。但不幸的是现在的分布式系统中多数关键的基础服务都是有状态的，如缓存、数据库、对象存储、消息队列，等等，只有Web服务器这类服务属于无状态的
+
+针对有状态的应用，k8s发布了StatefulSet及对应的StatefulSetController，由StatefulSet管理的Pod具备以下的几项额外的特性：
+
+* Pod会按顺序创建和按顺序销毁
+* Pod具有稳定的网络名称
+* Pod具有稳定的持久存储
+
+
+
+Linux网络虚拟化
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220109210227496.png" alt="image-20220109210227496" style="zoom:50%;margin-left:-1px" />
+
+程序发送数据做的是层层封包，加入协议头，传给下一层；接受数据则是层层解包，提取协议体，传给上一层
+
+
+
+
+
+
+
+### 干预网络通信
+
+这套名为Netfilter的框架是Linux防火墙和网络的主要维护者Rusty Russell提出并主导设计的，它围绕网络层（IP协议）周围，埋下了五个钩子（Hooks）
+
+（1）PREROUTING
+
+（2）INPUT
+
+（3）FORWARD
+
+（4）OUTPUT
+
+（5）POSTROUTING
+
+<img src="/Users/yangli/Library/Application Support/typora-user-images/image-20220109220010154.png" alt="image-20220109220010154" style="zoom:50%;margin-left:-1px" />
+
+
+
+iptables内置了五张不可扩展的规则表
+
+1.raw表：用于去除数据包上的连接追踪机制（Connection Tracking）
+
+2.mangle表：用于修改数据包的报文头信息，如服务类型（Type of Service，ToS）、生存周期（Time to Live，TTL）以及为数据设置Mark标记，典型的应用是链路的服务质量管理（Quality of Service，Qos）
+
+3.nat表：用于修改数据包的源或者目的地址等信息，典型的应用是网络地址转换（Network Address Translation）
+
+4.filter表：用于对数据包进行过滤，控制到达某条链上的数据包是继续放行、直接丢弃或拒绝（ACCEPT、DROP、REJECT），典型的应用时防火墙
+
+5.security表：用于在数据包上应用SELinux，这张表并不常见
+
+
+
+以上五张规则表是具有优先级的：raw->mangle->nat->filter->security
+
+iptables不仅仅是Linux系统自带的一个网络工具，它在容器间通信中扮演相当重要的角色，譬如k8s用来管理Service的Endpoints的核心组件kube-proxy，就依赖iptables来完成ClusterIP到Pod的通信（也可以采用IPVS、IPVS同样是基于Netfilter的），这种通信的本质就是一种NAT访问
